--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <title>Aim Training | Проект 5</title>
+    <title>Aim Training</title>
   </head>
   <body>
     <div class="screen">
       <h1>Aim Training</h1>
-      <a href="#" class="start" id="start">Начать игру</a>
+      <a href="#" class="start" id="start">Start Game</a>
     </div>
 
     <div class="screen">
@@ -17,29 +17,29 @@
       <ul class="time-list" id="time-list">
         <li>
           <button class="time-btn" data-time="10">
-            10 сек
+            10s
           </button>
         </li>
         <li>
           <button class="time-btn" data-time="15">
-            15 сек
+            15s
           </button>
         </li>
         <li>
           <button class="time-btn" data-time="20">
-            20 сек
+            20s
           </button>
         </li>
         <li>
           <button class="time-btn" data-time="30">
-            30 сек
+            30s
           </button>
         </li>
       </ul>
     </div>
 
     <div class="screen">
-      <h3>Осталось <span id="time">00:00</span></h3>
+      <h3>Time <span id="time">00:00</span></h3>
       <div class="board" id="board"></div>
     </div>
     <script src="app.js"></script>
