--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
 
     <div class="screen">
-      <h1>Выберите время</h1>
+      <h1>Select a Time</h1>
       <ul class="time-list" id="time-list">
         <li>
           <button class="time-btn" data-time="10">
